[package]
name = "mvengine"
version = "0.1.0"
edition = "2024"

[features]
timed = []

[[test]]
name = "test"
path = "tests/main.rs"
harness = false

[[test]]
name = "ecs"
path = "tests/ecs.rs"
harness = false

[dependencies]
# proc macros
mvengine-proc-macro = { path = "./Proc", version = "1.0.0" }
mvutils = { version = "1.6.1", features = ["save_str"] }
mvlogger = "0.4.0"

# general dependencies
bytebuffer = "2.2.0"
itertools = "0.14.0"
log = "0.4.20"
num-traits = "0.2.17"
hashbrown = "0.15.1"
bitflags = "2.5.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
crossbeam-channel = "0.5.12"
native-dialog = "0.9.0"
bimap = "0.6.3"
auto_enums = "0.8.7"
ahash = "0.8.11"
rand = "0.9.0"
include_dir = "0.7.3"
ropey = "1.6.1"
ordered-float = "5.1.0"
indexmap = "2.11.4"
gltf = { version = "1.4.0", features = [
    "KHR_lights_punctual",
    "KHR_materials_emissive_strength",
    "KHR_materials_ior",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_specular",
    "KHR_materials_transmission",
    "KHR_materials_unlit",
    "KHR_materials_variants",
    "KHR_materials_volume",
    "KHR_texture_transform",
    "extensions",
]}

#audio
cpal = "0.15.3"

# rendering
image = "0.25.0"
gl = "0.14.0"

# yes all these have to be outdated unless I want to do some major refactoring
winit = { version = "0.29.2", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
glutin = "0.31.0"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"

# vulkan dependencies
ash = "0.37.3"
gpu-alloc = "0.6.0"
gpu-alloc-ash = "0.6.0"
shaderc = "0.10.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
