[package]
name = "mvcore"
version = "1.0.0"
edition = "2021"
description = "The core of the MVEngine game engine."
authors = [
    "Maxim Savenkov <mqxf@mvteam.dev>",
    "Julian Hohenhausen <v22@mvteam.dev>"
]
readme = "../README.md"
keywords = [
    "mvcore",
    "rendering",
    "wgpu",
    "assets",
    "gui"
]
categories = [
    "rendering",
    "rendering::engine",
    "gui",
    "graphics"
]
license-file = "../LICENCE"

[[test]]
name = "test"
path = "tests/main.rs"
harness = false

[features]
ray-tracing = []

[dependencies]

# internal dependencies
mvcore-proc-macro = { path = "Proc" }

# mvteam dependencies
mvutils.workspace = true
mvlogger.workspace = true

# general dependencies
bytebuffer.workspace = true
itertools.workspace = true
log.workspace = true
num-traits.workspace = true
hashbrown.workspace = true
bitflags.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
ahash.workspace = true

# specific dependencies
include_dir.workspace = true
shaderc.workspace = true
openal.workspace = true
image.workspace = true
gltf.workspace = true

# rendering dependencies
winit.workspace = true

# vulkan dependencies
ash.workspace = true
gpu-alloc.workspace = true
gpu-alloc-ash.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]

# metal dependencies
metal.workspace = true
objc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]

# directx dependencies
d3d12.workspace = true
winapi.workspace = true
