[package]
name = "mvengine_ecs"
version = "0.1.0"
edition = "2021"

[[test]]
name = "test"
path = "tests/main.rs"
harness = false

[dependencies]
mvcore = { path = "../../Core" }
ecsproc = { path = "Proc", package = "mvengine-ecs-proc-macro" }
mvutils.workspace = true
mvlogger.workspace = true
hashbrown.workspace = true
parking_lot.workspace = true
num-traits.workspace = true