[package]
name = "mvengine-game-render2d"
version = "0.1.0"
edition = "2021"

[[test]]
name = "test"
path = "tests/main.rs"
harness = false

[dependencies]
mvcore = { path = "../../Core" }
mvutils.workspace = true
mvlogger.workspace = true

gpu-alloc.workspace = true
shaderc.workspace = true
log.workspace = true
bytebuffer.workspace = true
hashbrown.workspace = true