[package]
name = "mvengine_network"
version = "0.1.0"
edition = "2021"

[[test]]
name = "test"
path = "tests/main.rs"
harness = false

[dependencies]

# mvteam dependencies
mvutils.workspace = true
mvlogger.workspace = true

# general dependencies
bytebuffer.workspace = true
itertools.workspace = true
log.workspace = true
num-traits.workspace = true
hashbrown.workspace = true
parking_lot.workspace = true
