[package]
name = "Renderer2D"
version = "0.1.0"
edition = "2021"

[[test]]
name = "test"
path = "tests/main.rs"
harness = false

[dependencies]
mvcore = { path = "../../Core" }
mvutils.workspace = true
mvlogger.workspace = true
parking_lot.workspace = true
num-traits.workspace = true
hashbrown.workspace = true
log.workspace = true
gpu-alloc.workspace = true
shaderc.workspace = true
bytebuffer.workspace = true